@startuml
class Chantier {
+ ChantierId : int (PK)
+ NomChantier : string
+ Description : string
+ DateDebut : DateTime
+ DateFin : DateTime
+ Statut : Statut
+ Adresse : string
+ Client : Client
}
class Client {
+ ClientId : int (PK)
+ NomClient : string
+ PrenomClient : string
+ MailClient : string
+ Tel : string
}
class Document {
+ DocumentId : int (PK)
+ MontantDocument : int
+ DateDocument : DateTime
+ EtatDocument : Etat
+ Client : Client
+ Type : Type 
}
class Materiel {
+ MaterielId : int (PK)
+ Label : string
+ Quantite : int
+ Etat : EtatMateriel
}
class Rdv {
+ RdvId : int (PK)
+ DateRdv : DateTime
+ Lieu : string
+ Description : string 
+ Client : Client
+ Utilisateur : Utilisateur
}
class Utilisateur {
+ UtilisateurId : int (PK)
+ NomUtilisateur : string 
+ PrenomUtilisateur : string
+ MailUtilisateur : string 
- Mdp : string
+ Role : Role
}

Chantier "1..*" -- "1..1" Client
Document "1..*" -- "1..1" Client
Rdv "1..*" -- "1..1" Client
Rdv "1..*" -- "1..1" Utilisateur
Chantier "1..*" .. "1..*" Materiel

@enduml